kubernetes/apps/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
