kubernetes/apps/mealie/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  parentRefs:
    - name: home-cloud
      namespace: gateway
      sectionName: https
  hostnames: [mealie.home.antonu.org]
  rules:
    - backendRefs:
        - name: mealie
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-redirect
  namespace: mealie
spec:
  parentRefs:
    - name: home-cloud
      namespace: gateway
      sectionName: http
  hostnames: [mealie.home.antonu.org]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
